--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -54,10 +54,12 @@ decoration {
 animations {
     enabled = yes
     bezier = liner, 1, 1, 1, 1
+    #animation = layers, 0, 1, default, fade
+    animation = windows, 1, 1, default
+    animation = workspaces, 1, 1, default
     animation = border, 1, 1, liner
     animation = borderangle, 1, 30, liner, loop
-    animation = fade, 1, 10, default
-}
+    animation = fade, 1, 5, default
 
 dwindle {
     pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
